# ikms-multi-agent-rag

./: CODE_DOCUMENTATION.md  USER_GUIDE.md
.github/workflows/: keep-alive.yml
backend/: .dockerignore  .gitignore  Dockerfile  Procfile  check_deployment.py  keep_alive.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  verify_render_deployment.py
backend/src/app/: __init__.py  api.py  main.py
backend/src/app/api/: ask.py  auth.py  conversation.py  file.py
backend/src/app/core/: auth.py  config.py
backend/src/app/core/agents/: agents.py  graph.py  prompts.py  state.py  tools.py  utils.py
backend/src/app/core/llm/: factory.py
backend/src/app/core/retrieval/: serialization.py  vector_store.py
backend/src/app/db/: checkpointer.py  connection.py  db_service.py  models.py
backend/src/app/services/: conversation_service.py  indexing_service.py  qa_service.py  user_service.py
frontend/: .env  API_INTEGRATION.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: GoogleSignInModal.tsx  ProtectedRoute.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  EmptyState.tsx  FileSelector.tsx  MessageList.tsx  MessageSkeleton.tsx
frontend/src/components/home/: imageSlideShow.css  imageSlideShow.tsx
frontend/src/contexts/: NavigationContext.tsx
frontend/src/hooks/: useToast.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/home/: home.tsx
frontend/src/store/: store.ts
frontend/src/types/: chat.ts  file.ts
frontend/src/utils/: axios.ts
(+10 files in other folders)
